--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.52.5"
+    "rollup": "^4.52.5",
+    "rollup-plugin-dts": "^6.2.3"
   },
   "repository": {
     "type": "git",
