--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,17 +4,8 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
-    inputs:
-      version-type:
-        description: 'Version type to release'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - 'major'
-          - 'minor'
-          - 'patch'
+    paths:
+      - 'package.json'
 
 jobs:
   publish:
@@ -43,23 +34,40 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Bump version and publish
-        if: github.event_name == 'workflow_dispatch'
+      - name: Check version change
+        id: check_version
+        if: github.event_name == 'push'
         run: |
-          git pull
-          VERSION_TYPE=${{ github.event.inputs.version-type }}
-          npm version $VERSION_TYPE -m "Upgrade to %s"
-          npm publish
-          git push --follow-tags
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # 获取当前提交的版本
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "Current version: $CURRENT_VERSION"
           
-      - name: Auto publish patch version
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+          # 获取上一次提交的版本
+          git fetch origin main --depth=2
+          PREVIOUS_VERSION=$(git show HEAD^:package.json 2>/dev/null | node -p "JSON.parse(require('fs').readFileSync(0, 'utf8')).version" || echo "")
+          
+          if [ -z "$PREVIOUS_VERSION" ]; then
+            echo "No previous version found, assuming version changed"
+            echo "version_changed=true" >> $GITHUB_OUTPUT
+          elif [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
+            echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
+            echo "version_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "Version unchanged: $CURRENT_VERSION"
+            echo "version_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create tag on version change
+        if: github.event_name == 'push' && steps.check_version.outputs.version_changed == 'true'
         run: |
-          git pull
-          npm version patch -m "Upgrade to %s"
+          VERSION=$(node -p "require('./package.json').version")
+          git tag "v$VERSION"
+          git push origin "v$VERSION"
+          echo "Created tag: v$VERSION"
+
+      - name: Publish on version change
+        if: github.event_name == 'push' && steps.check_version.outputs.version_changed == 'true'
+        run: |
           npm publish
-          git push --follow-tags
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
